tests/baselines/reference/parserParameterList11.errors.txt
parserParameterList11.ts(1,2): error TS2370: A rest parameter must be of an array type.
parserParameterList11.ts(1,8): error TS1047: A rest parameter cannot be optional.


==== parserParameterList11.ts (2 errors) ====
    (...arg?) => 102;
     ~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
           ~
!!! error TS1047: A rest parameter cannot be optional.